# base

./: .clang-tidy  BUILD.gn  any.h  array_view.h  attributes.h  ave.gni  ave_config.cc  ave_config.h  ave_config_test.cc  base.gni  bitrate_tracker.cc  bitrate_tracker.h  buffer.h  byte_buffer.cc  byte_buffer.h  byte_utils.cc  byte_utils.h  checks.cc  checks.h  clock.cc  clock.h  condition.h  constructor_magic.h  copy_on_write_buffer.cc  copy_on_write_buffer.h  count_down_latch.cc  count_down_latch.h  errors.cc  errors.h  frequency_tracker.h  function_view.h  hexdump.cc  hexdump.h  ignore_wundef.h  logging.cc  logging.h  logging_benchmark.cc  logging_test.cc  macro.h  mutex.h  (+26 more)
.github/workflows/: clang-format-check.yml  clang-format.yml  cpp-checks.yml  format-check.yml
android/: BUILD.gn
android/androidapp/: AndroidManifest.xml
android/androidapp/res/values/: strings.xml  themes.xml
android/androidapp/res/values-night/: themes.xml
android/androidapp/src/io/github/yoofa/: MainActivity.java
android/java/io/github/yoofa/: AveClassLoader.java  AveConfig.java  ContextUtils.java  HelloWorld.java  Loggable.java  Logging.java  Size.java  ThreadUtils.java
android/jni/: ave_config_jni.cc  class_loader.cc  class_loader.h  jni_generator_helper.h  jni_string.h  jvm.cc  jvm.h  logging_jni.cc
buffer/: bit_buffer.cc  bit_buffer.h  bitstream_reader.cc  bitstream_reader.h
data_source/: BUILD.gn  a.diff  data_source.h  data_source_base.h  file_source.cc  file_source.h  http_base.cc  http_base.h  http_source.cc  http_source.h
memory/: BUILD.gn  aligned_memory.cc  aligned_memory.h
net/: BUILD.gn  README.md  async_packet_socket.h  async_socket_unittest.cc  async_tcp_socket.cc  async_tcp_socket.h  async_tcp_socket_unittest.cc  async_udp_socket.cc  async_udp_socket.h  dispatcher.h  ecn_marking.h  ip_address.cc  ip_address.h  ip_address_unittest.cc  network_buffer.h  network_thread.cc  network_thread.h  network_thread_unittest.cc  physical_socket.cc  physical_socket.h  physical_socket_server.cc  physical_socket_server.h  socket.cc  socket.h  socket_address.cc  socket_address.h  socket_address_unittest.cc  socket_dispatcher.cc  socket_dispatcher.h  socket_factory.h  socket_server.h  socket_thread.cc  socket_thread.h  socket_thread_unittest.cc  utils.cc  utils.h  utils_unittest.cc
net/example/: README.md  chat_client.cc  chat_server.cc  network_thread_example.cc  socket_thread_example.cc
net/http/: curl_demo.cc  curl_http_connection.cc  curl_http_connection.h  curl_http_provider.cc  curl_http_provider.h  http_connection.h  http_provider.h
numerics/: BUILD.gn  divide_round.h  divide_round_unittest.cc  exp_filter.cc  exp_filter.h  exp_filter_unittest.cc  kahan_sum.h  kahan_sum_unittest.cc  mod_ops.h  mod_ops_unittest.cc  moving_percentile_filter.h  percentile_filter.h  percentile_filter_unittest.cc  safe_compare.h  safe_compare_unittest.cc  safe_conversions.h  safe_conversions_impl.h  safe_conversions_unittest.cc  safe_minmax.h  sequence_number_unwrapper.h  sequence_number_unwrapper_unittest.cc  sequence_number_util.h  sequence_number_util_unittest.cc  statistics.h  statistics_benchmark.cc  statistics_unittest.cc
system/: BUILD.gn  ave_export.h  ave_export_template.h
task_util/: default_task_runner_factory.h  default_task_runner_factory_stdlib.cc  pending_task_flag.cc  pending_task_flag.h  repeating_task.cc  repeating_task.h  task.h  task_runner.cc  task_runner.h  task_runner_base.cc  task_runner_base.h  task_runner_factory.h  task_runner_stdlib.cc  task_runner_stdlib.h  task_runner_test.cc  to_task.h
test/: BUILD.gn  any_unittests.cc  bit_buffer_unittest.cc  bitrate_tracker_unittest.cc  bitstream_reader_unittest.cc  buffer_unittest.cc  checks_unittest.cc  clock_unittest.cc  copy_on_write_buffer_unittest.cc  frequency_tracker_unittest.cc  mock_task_runner_factory.h  rate_limiter_unittest.cc  rate_statistics_unittest.cc  repeating_task_unittest.cc  task_runner_for_test.cc  task_runner_for_test.h  task_runner_unittest.cc  task_runner_unittest.h
tracing/: BUILD.gn  file_tracer.cc  file_tracer.h  perfetto_tracer.cc  perfetto_tracer.h  trace.cc  trace.h  trace_categories.cc  trace_categories.h  trace_factory.cc  trace_factory.h
tracing/test/: test_perfetto_trace.cc  test_trace.cc
units/: BUILD.gn  data_rate.cc  data_rate.h  data_rate_unittest.cc  data_size.cc  data_size.h  data_size_unittest.cc  frequency.cc  frequency.h  frequency_unittest.cc  time_delta.cc  time_delta.h  time_delta_unittest.cc  timestamp.cc  timestamp.h  timestamp_test.cc  unit_base.h  unit_base_unittest.cc
