import("//build/buildflag_header.gni")
import("//build/config/arm.gni")
import("//build/config/c++/c++.gni")
import("//build/config/cast.gni")
import("//build/config/chromeos/ui_mode.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/dcheck_always_on.gni")
import("//build/config/logging.gni")
import("//build/config/nacl/config.gni")
import("//build/config/profiling/profiling.gni")
import("//build/config/sysroot.gni")
import("//build/config/ui.gni")
import("//build/nocompile.gni")
import("//build/timestamp.gni")
import("//build_overrides/build.gni")
import("//testing/libfuzzer/fuzzer_test.gni")
import("//testing/test.gni")
import("base.gni")
import("build/ave.gni")

ave_library("base") {
  testonly = true
  visibility = [ "*" ]

  sources = [
    "array_view.h",
    "buffer.h",
    "null.cc",
    "zero_memory.cc",
    "zero_memory.h",
  ]
  deps = [
    ":attributes",
    ":count_down_latch",
    ":ignore_wundef",
    ":logging",
    ":macromagic",
    ":task_util",
    ":thread",
    ":timeutils",
    ":type_traits",
    ":utils",
  ]

  deps += [ "third_party/sigslot" ]
  if (is_android) {
    deps += [ "android" ]
  }

  if (ave_base_include_test) {
    deps += [
      ":logging_benchmark",
      #":statistics_benchmark",
    ]
    deps += [
      ":logging_test",
      ":task_test",
      ":thread_test",
    ]
  }
  deps += [ "data_source" ]
}

ave_library("buffer") {
  sources = [ "buffer.h" ]
}

ave_library("timeutils") {
  visibility = [ "*" ]
  sources = [
    "system_time.cc",
    "system_time.h",
    "time_utils.cc",
    "time_utils.h",
  ]
  deps = [ ":utils" ]
}

ave_source_set("type_traits") {
  sources = [ "type_traits.h" ]
}

ave_source_set("macromagic") {
  visibility = [ "*" ]
  sources = [
    "constructor_magic.h",
    "thread_annotation.h",
  ]
}

ave_source_set("byte_utils") {
  sources = [
    "byte_utils.cc",
    "byte_utils.h",
  ]
}

ave_source_set("checks") {
  sources = [
    "checks.cc",
    "checks.h",
  ]
}

ave_library("utils") {
  sources = [
    "errors.cc",
    "errors.h",
    "hexdump.cc",
    "hexdump.h",
    "types.h",
    "unique_fd.h",
    "utils.cc",
    "utils.h",
  ]
  deps = [ ":checks" ]
}

ave_library("count_down_latch") {
  visibility = [ "*" ]
  sources = [
    "count_down_latch.cc",
    "count_down_latch.h",
  ]
}

ave_source_set("ignore_wundef") {
  sources = [ "ignore_wundef.h" ]
}

ave_source_set("attributes") {
  sources = [ "attributes.h" ]
}

ave_library("logging") {
  libs = []
  sources = [
    "logging.cc",
    "logging.h",
  ]
  deps = [ ":timeutils" ]

  if (is_android) {
    libs += [ "log" ]
  }
}

ave_source_set("thread") {
  sources = [
    "thread.cc",
    "thread.h",
    "thread_defs.h",
  ]
  deps = [
    ":count_down_latch",
    ":logging",
    ":macromagic",
  ]
}

ave_library("task_util") {
  sources = [
    "task_util/default_task_runner_factory.h",
    "task_util/pending_task_flag.cc",
    "task_util/pending_task_flag.h",
    "task_util/repeating_task.cc",
    "task_util/repeating_task.h",
    "task_util/task.h",
    "task_util/task_runner.cc",
    "task_util/task_runner.h",
    "task_util/task_runner_base.cc",
    "task_util/task_runner_base.h",
    "task_util/task_runner_factory.h",
    "task_util/to_task.h",
  ]

  sources += [
    "task_util/default_task_runner_factory_stdlib.cc",
    "task_util/task_runner_stdlib.cc",
    "task_util/task_runner_stdlib.h",
  ]

  configs -= [ "//build/config/compiler:rtti" ]
  configs += [ "//build/config/compiler:rtti" ]

  deps = [
    ":checks",
    ":logging",
    ":thread",
  ]
}

ave_library("sequence_checker") {
  sources = [
    "sequence_checker.h",
    "sequence_checker_internal.cc",
    "sequence_checker_internal.h",
  ]
  deps = [
    ":logging",
    ":task_util",
  ]
}

ave_library("numerics") {
  sources = [
    "numerics/exp_filter.cc",
    "numerics/exp_filter.h",
  ]
}

ave_source_set("safe_conversions") {
  sources = [
    "numerics/safe_conversions.h",
    "numerics/safe_conversions_impl.h",
  ]
  deps = [ ":checks" ]
}

ave_source_set("safe_compare") {
  sources = [
    "numerics/safe_compare.h",
    "numerics/safe_compare_impl.h",
  ]
  deps = [ ":type_traits" ]
}

ave_source_set("safe_minmax") {
  sources = [ "numerics/safe_minmax.h" ]
  deps = [
    ":checks",
    ":safe_compare",
    ":type_traits",
  ]
}

ave_source_set("divide_round") {
  sources = [ "numerics/divide_round.h" ]
  deps = [
    ":checks",
    ":safe_compare",
  ]
}

ave_source_set("statistics") {
  sources = [
    "numerics/kahan_sum.h",
    "numerics/statistics.h",
  ]
}

#--------------------

#ave_source_set("unit_base") {
#  sources = [ "units/unit_base.h" ]
#  deps = [
#    ":checks",
#    ":divide_round",
#    ":safe_conversions",
#  ]
#}

#--------------------

ave_executable("logging_benchmark") {
  testonly = true
  sources = [ "logging_benchmark.cc" ]
  deps = [
    ":logging",
    "//third_party/google_benchmark",
  ]
}

ave_executable("statistics_benchmark") {
  testonly = true
  sources = [ "numerics/statistics_benchmark.cc" ]
  deps = [
    ":statistics",
    "//third_party/google_benchmark",
  ]
}

executable("logging_test") {
  visibility = [ "*" ]
  sources = [ "logging_test.cc" ]

  deps = [ ":logging" ]
}

executable("thread_test") {
  sources = [ "thread_test.cc" ]
  deps = [
    ":logging",
    ":thread",
  ]
}

ave_source_set("task_runner_unittest") {
  testonly = true
  sources = [
    "test/repeating_task_unittest.cc",
    "test/task_runner_for_test.cc",
    "test/task_runner_for_test.h",
    "test/task_runner_unittest.cc",
    "test/task_runner_unittest.h",
  ]
  deps = [
    ":logging",
    ":task_util",
    "//test:test_support",
  ]
}

executable("task_test") {
  sources = [ "task_util/task_runner_test.cc" ]
  deps = [
    ":logging",
    ":task_util",
  ]
}

ave_source_set("numerics_unittest") {
  testonly = true
  sources = [
    "numerics/exp_filter_unittest.cc",
    #"numerics/statistics_unittest.cc",
  ]
  deps = [
    ":logging",
    ":numerics",

    #":statistics",
    "//test:test_support",
  ]
}

ave_source_set("checks_unittest") {
  testonly = true
  sources = [ "test/checks_unittest.cc" ]
  deps = [
    ":checks",
    "//test:test_support",
  ]
}

executable("base_unittests") {
  testonly = true
  deps = [
    ":checks_unittest",
    ":numerics_unittest",
    ":task_runner_unittest",
    ":task_util",

    #"data_source:data_source_tests",
    "units:units_unittests_source",
    "//test:test_main",
    "//test:test_support",
  ]
}
