import("//base/build/ave.gni")

ave_library("data_source") {
  deps = [
    ":data_source_base",
    ":file_source",
    ":http_source",
  ]
}

ave_library("data_source_base") {
  sources = [
    "data_source.h",
    "data_source_base.h",
  ]
}

ave_library("file_source") {
  sources = [
    "file_source.cc",
    "file_source.h",
  ]
}

ave_library("http_source") {
  sources = [
    "http_base.cc",
    "http_base.h",
    "http_source.cc",
    "http_source.h",
  ]
  deps = [
    "//base:logging",
    "//base:timeutils",
    "//base/net:net_utils",
  ]
}
