import("//base/build/ave.gni")

ave_library("net") {
  sources = [
    "ip_address.cc",
    "ip_address.h",
    "socket.cc",
    "socket.h",
    "socket_address.cc",
    "socket_address.h",
    "socket_factory.h",
  ]
}

ave_library("net_utils") {
  sources = [
    "utils.cc",
    "utils.h",
  ]
}

ave_library("http_api") {
  sources = [
    "http/http_connection.h",
    "http/http_provider.h",
  ]
}

ave_library("curl_http") {
  sources = [
    "http/curl_http_connection.cc",
    "http/curl_http_connection.h",
    "http/curl_http_provider.cc",
    "http/curl_http_provider.h",
  ]
  deps = [ ":http_api" ]
}

ave_source_set("base_net_unittests_source") {
  testonly = true
  sources = [
    "ip_address_unittest.cc",
    "socket_address_unittest.cc",
  ]
  deps = [
    ":net",
    "//test:test_support",
  ]
}

ave_executable("net_unittests") {
  testonly = true
  deps = [
    ":base_net_unittests_source",
    "//test:test_main",
    "//test:test_support",
  ]
}
