import("../build/ave.gni")

ave_library("units") {
  deps = [
    ":time_delta",
    ":timestamp",
    ":units_base",
  ]
}

source_set("units_base") {
  sources = [ "unit_base.h" ]
  deps = [
    "..:checks",
    "..:divide_round",
    "..:safe_conversions",
  ]
}

source_set("time_delta") {
  sources = [
    "time_delta.cc",
    "time_delta.h",
  ]
  deps = [
    ":units_base",
    "..:checks",
    "..:divide_round",
    "..:safe_conversions",
  ]
}

source_set("timestamp") {
  sources = [
    "timestamp.cc",
    "timestamp.h",
  ]
  deps = [
    ":time_delta",
    ":units_base",
    "..:checks",
  ]
}

source_set("units_unittests_source") {
  testonly = true
  sources = [
    "time_delta_unittest.cc",
    "timestamp_test.cc",
    "unit_base_unittest.cc",
  ]
  deps = [
    ":time_delta",
    ":timestamp",
    ":units_base",
    "//test:test_support",
  ]
}
